syntax = "proto3";
package dbproto;

message UsercenterList {
    int32 total = 1;
    int32 size = 2;
    int32 page = 3;
    string nickname = 4;
    string phone = 5;
    repeated Userinfo list = 6;
}

message Userinfo {
    int64 id = 1;
    string nickname = 2;
    string phone = 3;
    int32 login_time = 4;
    string login_ip = 5;
    int32 credits = 6;
    int32 kxd = 7;
    string invitation_code = 8;
    bool is_invited = 9;
    int32 sex = 10;
    bool bind_wechat = 11;
    bool bind_qq = 12;
    bool bind_phone = 13;
}

message UserStatisticsNum {
    int32 new_user_num = 1;
    int32 total_user_num = 2;
}





